@@ -1,3 +1,7 @@
+-Take time zone information into account when displaying creation date of
+ card in browser.
+-When trying to deactivate a card type in use, show name of the card type in
+ the error message.
 -Fix CTRL+F shortcut for inserting flash (reported by Gnome).
 -Backspace and delete shortcuts to delete the current card work again
  (reported by Dylan Gordhan).
